Fixed header spacing

--- a/src/header/style.scss
+++ b/src/header/style.scss
@@ -7,6 +7,7 @@
 }
 
 #logo {
+  margin-right: 10px;
   color: $neutral-lighter;
 
   > img {
